# INO

./: .env.example  .gitignore  AGENTS.md  AGENTS.md.bak  CHANGELOG.md  CODING.md  CONTRIBUTING.md  Makefile  README.md  api.py  bot.py  config.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: __init__.py  app.py  auth.py  schemas.py
bot/: __init__.py  app.py  auth.py  commands.py  events.py  handler.py  messages.py
data/: preferences.md
db/: __init__.py  action_log.py  chat.py  concepts.py  core.py  diagnostics.py  migrations.py  preferences.py  proposals.py  relations.py  review_reminders.py  reviews.py  scheduler_state.py  topics.py  vectors.py
docs/: API.md  ARCHITECTURE.md  CHAT_FLOW_HARNESS.md  CONCEPT_RELATIONS_PLAN.md  DEVNOTES.md  DOC_INDEX.md  DOC_STANDARD.md  SETUP.md  TAXONOMY_REBUILD.md  index.md
frontend/: components.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
scripts/: agent.py  dev_all.py  live_output_contract_smoke.py  maintenance_smoke.py  migrate_vectors.py  start.bat  start_api.bat  taxonomy_shadow_rebuild.py  test_chat_flow.py  test_prompts.py  test_quiz_generator.py  test_similarity.py
services/: action_contracts.py  backup.py  chat_actions.py  chat_admin.py  chat_payload.py  chat_quiz.py  chat_session.py  context.py  dedup.py  embeddings.py  formatting.py  kimi.py  learn_turn.py  llm.py  llm_runtime.py  parser.py  pipeline.py  state.py  (+8 more)
(+167 files in other folders)
