[project]
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "venv/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"db/__init__.py" = ["F401"]
"webui/**" = ["E501"]
"scripts/**" = ["E501"]
